# rear-differential

./: .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml  readme.md  requirements.in  requirements.txt
.github/workflows/: docker-build.yaml
app/: main.py
app/core/: config.py
app/models/: api.py
app/routers/: flyway.py  media.py  movies.py  prediction.py  training.py
app/services/: db_service.py  file_service.py  transmission_service.py
test/: README.md  conftest.py  prep_would_not_watch_test.py  pytest.ini  requirements.txt  run_tests.py  test_file_deletion.py  test_file_deletion_dev.py  test_integration.py
test/fixtures/: file_deletion_test.yaml
test_env/: pyvenv.cfg
