[project]
name = "rear-differential"
version = "0.1.0"
description = "FastAPI-based service providing an interface between database and front-end for media management"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
    "psycopg2-binary>=2.9.9",
    "transmission-rpc>=7.0.11",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "requests>=2.28.0",
]